kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: paulynomial-index
spec:
  selector:
    app: paulynomial-index
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
