kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
    field.cattle.io/description: Ingress for main personal website splash page
  name: paulynomial-index-ingress
  namespace: paulynomial-index
spec:
  rules:
  - host: paulynomial.com
    http:
      paths:
      - backend:
          serviceName: paulynomial-index-service
          servicePort: 80
        path: /
        pathType: Prefix
  - host: paulinomial.com
    http:
      paths:
      - backend:
          serviceName: paulynomial-index-service
          servicePort: 80
        path: /
        pathType: Prefix
  - host: paul-kiernan.com
    http:
      paths:
      - backend:
          serviceName: paulynomial-index-service
          servicePort: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - paulynomial.com
    - paulinomial.com
    - paul-kiernan.com
    secretName: paulynomial-ingress-prod-tls
